--- a/index.html
+++ b/index.html
@@ -194,6 +194,19 @@
             color: #fff;
         }
 
+        .footerLine {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            margin-top: 60px;
+            text-align: center;
+            font-size: 12px;
+            color: #808080;
+            font-weight: 400;
+            line-height: 16px;
+        }
+
         @media (max-width: 768px) {
             .content {
                 padding: 30px 10px;
@@ -321,6 +334,11 @@
 
             <div class="buttonCard">
                 <a href="">Central de Ajuda</a>
+            </div>
+
+
+            <div class="footerLine">
+               <p>Essa é uma mensagem automática, por favor não responda.</p>
             </div>
         </div>
 
