--- a/blog.html
+++ b/blog.html
@@ -328,6 +328,18 @@
             gap: 1rem;
             margin-top: 0.5rem;
         }
+
+        .text a {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            text-decoration: none;
+            color: #000;
+            border-radius: 8px;
+            padding: 12px 20px 12px 20px;
+            border: 1.5px solid #ccc;
+        }
         .text h3 {
                 text-align: start;
                 padding: 0;
@@ -356,6 +368,18 @@
                 flex-direction: column;
                 align-items: start;
             }
+
+            .text a {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            text-decoration: none;
+            color: #000;
+            
+            padding: 12px 20px 12px 20px;
+            border: 1.5px solid #ccc;
+        }
 
             .description {
                 width: 90%;
