--- a/blog.html
+++ b/blog.html
@@ -335,6 +335,7 @@
             justify-content: center;
             text-align: center;
             text-decoration: none;
+            max-width: 60%;
             color: #000;
             border-radius: 8px;
             padding: 12px 20px 12px 20px;
