--- a/blog.html
+++ b/blog.html
@@ -97,7 +97,7 @@
 
         .logo img {
             width: 100%;
-            max-width: 20vw;
+            max-width: 200px;
         }
 
         .itensMain {
