--- a/blog.html
+++ b/blog.html
@@ -35,7 +35,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            width: 672px;
+            width: 472px;
             max-width: 90vw; /* Responsive max-width */
             background-color: #fff;
             padding: 2rem;
@@ -456,11 +456,11 @@
 
     <div class="content">
         <div class="logo">
-            <img src="./assets/img/logo.png" alt="Logo">
+                <img src="https://via.placeholder.com/50" alt="Placeholder Image" >
         </div>
         <div class="main">
             <div class="cardImg">
-               <img src="./assets/img/iPad Pro mockup 13-inch top view.png" alt="">
+                <img src="https://placehold.co/400x200" alt="Placeholder Image" >
             </div>
 
             <div class="cardText">
@@ -477,7 +477,7 @@
 
                     <div class="cardContentImg">
                       <div class="imgContent">
-                        <img src="./assets/img/Frame 44.png" alt="">
+                        <img src="https://placehold.co/600x400" alt="Placeholder Image" >
                       </div>
                       <div class="btnLinkConfere">
                         <p>Comunidade e a mudança de comportamento do consumidor</p>
@@ -498,7 +498,7 @@
                 <div class="cardPostOutrosConteudos">
                     <div class="cardFilho">
                        <div class="img">
-                        <img src="./assets/img/image 7 (1).png" alt="">
+                        <img src="https://placehold.co/600x400" alt="Placeholder Image" >
                        </div>
                        <div class="text">
                         <p>07/07/2024</p>
@@ -510,7 +510,7 @@
 
                     <div class="cardFilho">
                         <div class="img">
-                            <img src="./assets/img/image 7.png" alt="">
+                            <img src="https://placehold.co/600x400" alt="Placeholder Image" >
                         </div>
                         <div class="text">
                             <p>07/07/2024</p>
@@ -526,13 +526,13 @@
         <div class="redesSociaisLinks">
             <div class="redes">
                 <a href="#">
-                    <img src="./assets/img/logoinstagram.png" alt="Instagram">
+                    <img src="https://placehold.co/40x40" alt="Placeholder Image" >
                 </a>
                 <a href="#">
-                    <img src="./assets/img/linkedin.png" alt="LinkedIn">
+                    <img src="https://placehold.co/40x40" alt="Placeholder Image" >
                 </a>
                 <a href="#">
-                    <img src="./assets/img/youtube.png" alt="YouTube">
+                    <img src="https://placehold.co/40x40" alt="Placeholder Image" >
                 </a>
             </div>
 
