--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
         }
 
         .itemCor1, .itemCor2, .itemCor3 {
+            display: flex;
+            align-items: center;
+            justify-content: center;
             min-width: 48px;
             height: 48px;
             border-radius: 8px;
@@ -322,21 +325,27 @@
 
             <div class="itensMain">
                 <div class="item">
-                    <div class="itemCor1"></div>
+                    <div class="itemCor1">
+                        <img src="https://placehold.co/40x40" alt="Placeholder Image" >
+                    </div>
                     <div class="itemText">
                         <h3>Benefício 1</h3>
                         <p>Clique nos links abaixo para explorar nosso blog e se inscrever na comunidade...</p>
                     </div>
                 </div>
                 <div class="item">
-                    <div class="itemCor2"></div>
+                    <div class="itemCor2">
+                        <img src="https://placehold.co/40x40" alt="Placeholder Image" >
+                    </div>
                     <div class="itemText">
                         <h3>Benefício 2</h3>
                         <p>Clique nos links abaixo para explorar nosso blog e se inscrever na comunidade...</p>
                     </div>
                 </div>
                 <div class="item">
-                    <div class="itemCor3"></div>
+                    <div class="itemCor3">
+                        <img src="https://placehold.co/40x40" alt="Placeholder Image" >
+                    </div>
                     <div class="itemText">
                         <h3>Benefício 3</h3>
                         <p>Clique nos links abaixo para explorar nosso blog e se inscrever na comunidade...</p>
