--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="PT-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,8 +23,9 @@
             width: 100%;
             height: 100%;
             background-color: #7826F2;
-            overflow: auto;
-            padding: 120px;
+            overflow-y: auto;
+            padding-top: 120px;
+            padding-bottom: 120px;
             gap: 32px;
         }
 
