--- a/blog.html
+++ b/blog.html
@@ -143,7 +143,8 @@
             a {
                 text-decoration: none;
                 font-size: 16px;
-                color: #333333;
+                color: #000000;
+                font-weight: 600;
             }
         }
 
@@ -279,7 +280,7 @@
 
 
         .btnPost {
-            width: 104px;
+            width: 108px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -290,6 +291,8 @@
             line-height: 19.6px;
             text-decoration: none;
             border-radius: 8px;
+            color: #000;
+            font-weight: 600;
 
 
             &&
@@ -298,7 +301,8 @@
                 font-size: 14px;
                 font-weight: 400;
                 line-height: 19.6px;
-                color: #4D4D4D;
+                color: #000000;
+                font-weight: 600;
             }
         }
 
@@ -670,7 +674,7 @@
 
 
         .btnPost {
-            width: 104px;
+            width: 108px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -681,6 +685,8 @@
             line-height: 19.6px;
             text-decoration: none;
             border-radius: 8px;
+            color: #000;
+            font-weight: 600;
 
 
             &&
@@ -689,7 +695,8 @@
                 font-size: 14px;
                 font-weight: 400;
                 line-height: 19.6px;
-                color: #4D4D4D;
+                color: #020000;
+                font-weight: 600;
             }
         }
 
